--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ header {
 	height: 112px;
 	margin-bottom: 23px;
 
-	background: linear-gradient(90deg, #FDC021 0%, #FFD955 49.65%, #FFD43A 100%);
+	background: linear-gradient(90deg, #FDC021 0%, #FFD955 49.65%);
 }
 /*------------------------------------------footer-------------------------------------------------*/
 footer {
