--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,148 @@
+html {
+	font-family: 'Raleway', sans-serif;
+	font-weight: 600;
+	font-style: normal;
+	color: #000;
+}
+
 body {
 	width: 1263px;
 	margin: 0 auto;
 	background: #fff;
 }
 
+a:link,
+a:visited {
+	text-decoration: none;
+	color: #000;
+}
+/*-----------------------------------------header-------------------------------------------------*/
 header {
-	
-	height: 195px;
+	height: 185px;
 	left: 0px;
 	top: 0px;
+	padding: 10px 20px 0px 20px; 
 
 	background: #FFD642;
 	box-shadow: 0px 0px 4px 1px rgba(142, 119, 0, 0.6);
+}
+
+.header-nav {
+	display: flex;
+	width: 100%;
+	height: 100px;
+}
+
+.home-link:link,
+.home-link:visited {
+	display: flex;
+	flex-direction: row;
+	padding: 0;
+	width: 195px;
+	height: 60px;
+	border: 1px solid #FFD642;
+	box-shadow: 0px 0px 5px rgba(152, 119, 0, 0.8);
+	border-radius: 7px;
+}
+
+.home-link:active {
+	padding-top: 3px;
+	padding-bottom: 3px;
+}
+
+.logo {
+	width: 60px;
+	height: 60px;
+}
+
+.name {
+	padding-left: 5px;
+	line-height: 60px;
+	font-size: 20px;
+
+	text-shadow: 1px 1px 2px rgba(152, 119, 0, 0.8);
+}
+
+.header-phone-numbers {
+	font-size: 12px;
+	line-height: 18px;
+	margin-left: 40px;
+	text-align: center;
+}
+
+.header-nav form {
+	display: flex;
+}
+
+.header-nav-form-link-ad {
+	margin-left: 40px;
+}
+
+.search {
+	width: 435px;
+	height: 35px;
+	background: #FFFFFF;
+	border: 1px solid #FFD642;
+	box-sizing: border-box;
+	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+	/*border-radius: 9px;*/
+	border-bottom-left-radius: 9px;
+	border-top-left-radius: 9px;
+}
+
+.search:focus{
+	outline: none;
+}
+
+.search-button {
+	width: 35px;
+	height: 35px;
+	padding: 0;
+	margin: 0;
+	cursor: pointer;
+	background: url('images/search-icon.png') no-repeat;
+	background-color: #FFFFFF;
+	background-size: cover;
+	background-position: center;
+	border: 1px solid #FFD642;
+	border-left: none;
+	border-bottom-right-radius: 9px;
+	border-top-right-radius: 9px;
+	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+}
+
+.search-button:focus {
+	outline: none;
+}
+
+.link-ad:link,
+.link-ad:visited {
+	display: block;
+	width: 345px;
+	margin: 0 auto;
+	margin-top: 10px;
+	font-size: 24px;
+	text-align: center;
+	padding: 10px 30px;
+	background: #FFFFFF;
+	border-radius: 15px;
+	transition: background 0.2s ease-in-out;
+	-webkit-transition: background 0.2s ease-in-out;
+  	-moz-transition: background 0.2s ease-in-out;
+  	-o-transition : background 0.2s ease-in-out;	
+}
+
+.link-ad:hover {
+	background: #eaeaea;
+	transition: background 0.2s ease-in-out;
+	-webkit-transition: background 0.2s ease-in-out;
+  	-moz-transition: background 0.2s ease-in-out;
+  	-o-transition : background 0.2s ease-in-out;	
+} 
+
+.link-ad:active {
+	padding-top: 13px;
+	padding-bottom: 7px;
 }
 /*------------------------------------------slider------------------------------------------------*/
 .slider {
@@ -30,12 +161,56 @@ header {
 .site-nav {
 	width: 100%;
 	height: 263px;
-	left: 290px;
-	/*top: 299px;*/
 	margin-top: 104px;
-
 	background: #FFDA57;
 }
+
+.site-nav-link-container{
+	display: flex;
+	padding: 16px 112px;
+}
+
+.site-nav-link:link,
+.site-nav-link:visited {
+	display: block;
+	text-align: center;
+	margin-right: 35px;
+	padding: 20px 35px 15px;
+	width: 179px;
+	height: 197px;
+	background: #FFFFFF;
+	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 10px;
+	transition: background 0.2s ease-in-out;
+	-webkit-transition: background 0.2s ease-in-out;
+  	-moz-transition: background 0.2s ease-in-out;
+  	-o-transition : background 0.2s ease-in-out;
+}
+
+.site-nav-link:hover,
+.site-nav-link:active {
+	background: #eaeaea;
+	transition: background 0.2s ease-in-out;
+	-webkit-transition: background 0.2s ease-in-out;
+  	-moz-transition: background 0.2s ease-in-out;
+  	-o-transition : background 0.2s ease-in-out;	
+}
+
+.site-nav-link:last-child {
+	margin-right: 0;
+}
+
+.site-nav-image {
+	width: 150px;
+	height: 150px;
+}
+
+.site-nav-p {
+	margin-top: 5px;
+	font-size: 22px;
+	text-align: center;
+}
+
 /*-------------------------------------------shop nav---------------------------------------------*/
 .shop-nav {
 	width: 93.7%;
@@ -79,7 +254,7 @@ header {
 }
 
 .categories-nav {
-	width: 900px;
+	width: 899.5px;
 	margin-left: 14px;
 	height: 515px;
 	display: inline-block;
