--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,13 @@ html {
 	font-weight: 600;
 	font-style: normal;
 	color: #000;
+	background: #FFF;
 }
 
 body {
 	width: 1263px;
 	margin: 0 auto;
-	background: #fff;
+	background: #FFF;
 }
 
 a:link,
@@ -75,12 +76,14 @@ header {
 }
 
 .header-nav-form-link-ad {
+	width: 470px;
 	margin-left: 40px;
 }
 
 .search {
 	width: 435px;
 	height: 35px;
+	padding-left: 15px;
 	background: #FFFFFF;
 	border: 1px solid #FFD642;
 	box-sizing: border-box;
@@ -100,7 +103,6 @@ header {
 	padding: 0;
 	margin: 0;
 	cursor: pointer;
-	background: url('images/search-icon.png') no-repeat;
 	background-color: #FFFFFF;
 	background-size: cover;
 	background-position: center;
@@ -109,6 +111,14 @@ header {
 	border-bottom-right-radius: 9px;
 	border-top-right-radius: 9px;
 	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+	transition: background 0.2s ease-in-out;
+	-webkit-transition: background 0.2s ease-in-out;
+  	-moz-transition: background 0.2s ease-in-out;
+  	-o-transition : background 0.2s ease-in-out;
+}
+
+.search-button:hover {
+	background: #eaeaea;
 }
 
 .search-button:focus {
@@ -218,7 +228,6 @@ header {
 	top: 562px;
 	left: 290px;
 	padding: 30px 40px 50px 40px;
-	background: #fff;
 }
 									/*------filler nav------*/
 .filler-nav {
