--- a/css/addesk.css
+++ b/css/addesk.css
@@ -24,8 +24,8 @@
 } 
 
 .link-ad-addesk:active {
-	padding-top: 13px;
-	padding-bottom: 7px;
+	padding-top: 18px;
+	padding-bottom: 12px;
 }
 
 .search-wrapper {
@@ -158,11 +158,12 @@
 
 .addesk-item {
 	display: inline-block;
-	width: 509px;
+	width: 497px;
 	margin-right: 20px;
 	margin-left: 20px;
 	margin-top: 70px;
-	height: 257px;
+	padding: 6px 3px;
+	height: 251px;
 	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 	background: #fff;
 	border: none;
@@ -178,7 +179,115 @@
 .addesk-item-link:active .addesk-item {
 	border-radius: 10px;
 	background: #FFFCF3;
-	border: 3px solid #F2B61B;
-	box-sizing: border-box;
+	/*border: 3px solid #F2B61B;*/
+	/*box-sizing: border-box;*/
+	box-shadow: inset 0 0 0 3px #F2B61B;
 }
 
+.addesk-item-link:hover .addesk-item-image-wrapper,
+.addesk-item-link:active .addesk-item-image-wrapper {
+	background: #FFFCF3;
+} 
+
+.addesk-item p {
+	margin-bottom: 0;
+	padding-left: 10px; 
+}
+
+.addesk-item-image-wrapper {
+	overflow: hidden;
+	position: relative;
+	width: 188px;
+	height: inherit;
+	background: #f6f6f6;
+}
+
+.addesk-item-image {
+	position: absolute;
+	top: -100%;
+    bottom: -100%;
+    left: -100%;
+    right: -100%;
+	margin: auto;
+	height: 250px;
+	min-width: 100%;
+	min-height: 100%;
+}
+
+.addesk-item-info {
+	height: inherit;
+	position: relative;
+}
+
+.addesk-item-head {
+	margin-top: 15px;
+	max-width: 290px;
+	max-height: 45px;
+	overflow: hidden;
+	font-size: 20px;
+	color: #efb700;
+}
+
+.addesk-item-category {
+	margin-top: 8px;
+	font-size: 12px;
+	font-weight: 400;
+	opacity: 0.5;
+}
+
+.addesk-item-description {
+	max-width: 290px;
+	margin-top: 8px;
+	font-size: 14px;
+	line-height: 18px;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 4;
+	-webkit-box-orient: vertical;
+}
+
+.addesk-item-phone {
+	font-size: 18px;
+	font-weight: 400;
+}
+
+.addesk-item-bottom {
+	position: absolute;
+	width: 290px;
+	bottom: 10px;
+}
+
+.addesk-item-date {
+	margin-top: 0;
+	font-size: 12px;
+	font-weight: 400;
+	opacity: 0.5;
+}
+
+.addesk-item-price {
+	margin-top: 3px;
+	font-size: 18px;
+}
+
+.addesk-item-favorite {
+	background: #FFD439;
+	border-radius: 10px;
+	font-size: 18px;
+	font-weight: 600;
+	outline: none;
+	border: none;
+	cursor: pointer;
+	width: 130px;
+	padding: 5px;
+	margin-top: 4px;
+
+	transition: background 0.2s ease-in-out;
+	-webkit-transition: background 0.2s ease-in-out;
+  	-moz-transition: background 0.2s ease-in-out;
+  	-o-transition : background 0.2s ease-in-out;
+}
+
+.addesk-item-favorite:hover,
+.addesk-item-favorite:active {
+	background: #d8b131;
+}
