--- a/css/shop.css
+++ b/css/shop.css
@@ -128,7 +128,7 @@
 
 .new-shop-item:hover,
 .new-shop-item:active {
-	background: #eaeaea;
+	background: #FFF7DC;
 	transition: background 0.2s ease-in-out;
 	-webkit-transition: background 0.2s ease-in-out;
   	-moz-transition: background 0.2s ease-in-out;
@@ -137,17 +137,27 @@
 
 .new-shop-item:hover .new-shop-item-hidden,
 .new-shop-item:active .new-shop-item-hidden{
-	display: block;
+	bottom: 0;
+}
+
+.new-shop-item:hover .new-shop-item-image-wrapper,
+.new-shop-item:active .new-shop-item-image-wrapper {
+	height: 150px;
 }
 
 .new-shop-item:hover .new-shop-item-image,
-.new-shop-item:active .new-shop-item-image{
-	bottom: -100px;
+.new-shop-item:active .new-shop-item-image {
+	bottom: -80%;
 }
 
-.new-shop-item:hover .new-shop-item-shadow,
-.new-shop-item:active  .new-shop-item-shadow {
-
+.new-shop-item-image-wrapper {
+	position: relative;
+	width: 100%;
+	height: 233px;
+	transition: height 0.2s ease-in-out;
+	-webkit-transition: height 0.2s ease-in-out;
+  	-moz-transition: height 0.2s ease-in-out;
+  	-o-transition : height 0.2s ease-in-out;
 }
 
 .new-shop-item-image {
@@ -157,25 +167,18 @@
     bottom: -100%;
     left: -100%;
     right: -100%;
-	margin: auto;
 	min-width: 100%;
-	min-height: 80%;
+	min-height: 200px;
 	max-width: 300px;
 	max-height: 260px;
-	transition: all 0.2s ease-in-out;
-	-webkit-transition: all 0.2s ease-in-out;
-  	-moz-transition: all 0.2s ease-in-out;
-  	-o-transition : all 0.2s ease-in-out;
-}
-
-.new-shop-item-shadow {
-	display: none;
-	width: 100%;
-	height: 
 }
 
 .new-shop-item-hidden {
-	display: none;
+	margin: auto;
+	position: absolute;
+	background: #FFF7DC;
+	bottom: -85px;
+	left: 0;
 	width: 100%;
 	transition: all 0.2s ease-in-out;
 	-webkit-transition: all 0.2s ease-in-out;
