--- a/css/shop.css
+++ b/css/shop.css
@@ -1,3 +1,5 @@
+
+/*---------------------------------------------header------------------------------------------*/
 .link-ad-addesk:link,
 .link-ad-addesk:visited {
 	display: block;
@@ -27,6 +29,7 @@
 	padding-top: 18px;
 	padding-bottom: 12px;
 }
+/*---------------------------------------------search------------------------------------------*/
 
 .search-wrapper {
 	width: 100%;
@@ -86,6 +89,8 @@
 	outline: none;
 }
 
+/*---------------------------------------------news shop items------------------------------------------*/
+
 .new-shop-items-p {
 	font-size: 20px;
 	margin-top: 35px;
@@ -128,7 +133,7 @@
 
 .new-shop-item:hover,
 .new-shop-item:active {
-	background: #FFF7DC;
+	background: #ffefbf;
 	transition: background 0.2s ease-in-out;
 	-webkit-transition: background 0.2s ease-in-out;
   	-moz-transition: background 0.2s ease-in-out;
@@ -143,10 +148,12 @@
 .new-shop-item:hover .new-shop-item-image-wrapper,
 .new-shop-item:active .new-shop-item-image-wrapper {
 	height: 150px;
+	background: #ffefbf;
 }
 
 .new-shop-item:hover .new-shop-item-image,
 .new-shop-item:active .new-shop-item-image {
+	background: #ffefbf;
 	bottom: -80%;
 }
 
@@ -154,10 +161,10 @@
 	position: relative;
 	width: 100%;
 	height: 233px;
-	transition: height 0.2s ease-in-out;
-	-webkit-transition: height 0.2s ease-in-out;
-  	-moz-transition: height 0.2s ease-in-out;
-  	-o-transition : height 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+	-webkit-transition: all 0.2s ease-in-out;
+  	-moz-transition: all 0.2s ease-in-out;
+  	-o-transition : all 0.2s ease-in-out;
 }
 
 .new-shop-item-image {
@@ -177,6 +184,7 @@
 	margin: auto;
 	position: absolute;
 	background: #FFF7DC;
+	max-height: 80px;
 	bottom: -85px;
 	left: 0;
 	width: 100%;
@@ -184,4 +192,96 @@
 	-webkit-transition: all 0.2s ease-in-out;
   	-moz-transition: all 0.2s ease-in-out;
   	-o-transition : all 0.2s ease-in-out;
+}
+
+.new-shop-item-name {
+	text-align: left;
+	margin-top: 10px;
+	padding-left: 10px;
+	margin-bottom: 10px;
+}
+
+.new-shop-item-description {
+	text-align: left;
+	font-size: 14px;
+	padding-left: 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	max-height: 40px;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 2;
+	-webkit-box-orient: vertical;
+}
+
+/*---------------------------------------------shop items------------------------------------------*/
+
+.shop-items {
+	display: flex;
+	padding: 40px 80px;
+	margin-top: 5px;
+}
+
+.shop-items-filter {
+	width: 300px;
+	height: 352px;
+	margin-right: 63px;
+	background: #FFFFFF;
+	box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
+	border-radius: 10px;
+}
+
+.shop-items-container {
+	width: 740px;
+}
+
+.shop-item {
+	display: inline-block;
+	position: relative;
+	width: 325px;
+	height: 348px;
+	padding: 6px 0;
+	margin: 0 20px 20px 20px;
+	box-shadow: 2px 2px 4px rgba(12, 12, 12, 0.25);
+	border-radius: 10px;
+
+	transition: all 0.2s ease-in-out;
+	-webkit-transition: all 0.2s ease-in-out;
+  	-moz-transition: all 0.2s ease-in-out;
+  	-o-transition : all 0.2s ease-in-out;
+}
+
+.shop-item-image-container {
+	position: relative;
+	width: 200px;
+	height: 300px;
+	margin: 0 auto;
+}
+
+.shop-item-image {
+	position: absolute;
+	margin: auto;
+	top: -100%;
+	bottom: -85%;
+	left: -100%;
+	right: -100%;
+	min-width: 100%;
+	min-height: 200px;
+	max-width: 300px;
+	max-height: 260px;
+}
+
+.shop-item-image-name {
+	position: absolute;
+	bottom: 0;
+	text-align: center;
+	width: 100%;
+}
+
+.shop-item-form-price-container {
+	position: absolute;
+	height: 30px;
+	width: 100%;
+	bottom: 15px;
+	background: #aaa
 }
