--- a/css/shop.css
+++ b/css/shop.css
@@ -5,10 +5,11 @@
 	display: block;
 	width: 440px;
 	margin: 0 auto;
+	color: #000;
 	font-size: 28px;
 	text-align: center;
 	padding: 15px 30px;
-	background: #FFFFFF;
+	background: var(--background);
 	border-radius: 15px;
 	transition: background 0.2s ease-in-out;
 	-webkit-transition: background 0.2s ease-in-out;
@@ -17,7 +18,7 @@
 }
 
 .link-ad-addesk:hover {
-	background: #eaeaea;
+	background: var(--link-hover-main);
 	box-shadow: 0px 0px 3px rgba(152, 119, 0, 0.8);
 	transition: background 0.2s ease-in-out;
 	-webkit-transition: background 0.2s ease-in-out;
@@ -35,7 +36,7 @@
 	width: 100%;
 	height: 110px;
 	margin-top: 60px;
-	background: #FFDA57;
+	background: var(--main-color);
 }
 
 .search-wrapper form {
@@ -45,11 +46,11 @@
 .search {
 	width: 870px;
 	height: 70px;
-	background: #FFFFFF;
+	background: var(--background);
 	margin-top: 20px;
 	font-size: 24px;
 	padding-left: 30px;
-	border: 1px solid #FFD642;
+	border: 1px solid var(--border-yellow);
 	box-sizing: border-box;
 	box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
 	border-bottom-left-radius: 18px;
@@ -65,12 +66,12 @@
 	height: 70px;
 	padding: 0;
 	margin: 0;
-	margin-left: -4px;
+	margin-left: -5px;
 	font-size: 24px;
 	
 	cursor: pointer;
-	background-color: #FFFFFF;
-	border: 1px solid #FFD642;
+	background-color: var(--background);
+	border: 1px solid var(--border-yellow);
 	border-left: none;
 	border-bottom-right-radius: 18px;
 	border-top-right-radius: 18px;
@@ -82,7 +83,7 @@
 }
 
 .search-button:hover {
-	background: #eaeaea;
+	background: var(--link-hover-main);
 }
 
 .search-button:focus {
@@ -95,13 +96,19 @@
 	font-size: 20px;
 	margin-top: 35px;
 	margin-bottom: 5px;
-	padding-left: 145px; 
+	padding-left: 145px;
+	color: #000;
 }
 
 .new-shop-items {
 	width: 100%;
 	height: 263px;
-	background: #FFDA57;
+	background: var(--main-color);
+}
+
+html[data-theme="dark"] .new-shop-items{
+	border-top: 3px solid var(--border-yellow);
+	border-bottom: 3px solid var(--border-yellow);
 }
 
 .new-shop-items-container {
@@ -118,7 +125,7 @@
 	margin-right: 35px;
 	width: 233px;
 	height: 233px;
-	background: #FFFFFF;
+	background: var(--background);
 	box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 	border-radius: 10px;
 	transition: background 0.2s ease-in-out;
@@ -133,11 +140,12 @@
 
 .new-shop-item:hover,
 .new-shop-item:active {
-	background: #ffefbf;
-	transition: background 0.2s ease-in-out;
-	-webkit-transition: background 0.2s ease-in-out;
-  	-moz-transition: background 0.2s ease-in-out;
-  	-o-transition : background 0.2s ease-in-out;	
+	background: #ffefbf;	
+}
+
+html[data-theme="dark"] .new-shop-item:hover,
+html[data-theme="dark"] .new-shop-item:active {
+	background: var(--link-hover-main);	
 }
 
 .new-shop-item:hover .new-shop-item-hidden,
@@ -151,11 +159,21 @@
 	background: #ffefbf;
 }
 
+html[data-theme="dark"] .new-shop-item:hover .new-shop-item-image-wrapper,
+html[data-theme="dark"] .new-shop-item:active .new-shop-item-image-wrapper {
+	background: var(--link-hover-main);	
+}
+
 .new-shop-item:hover .new-shop-item-image,
 .new-shop-item:active .new-shop-item-image {
-	background: #ffefbf;
-	bottom: -80%;
+/*	background: #ffefbf;
+*/	bottom: -80%;
 }
+
+/*html[data-theme="dark"] .new-shop-item:hover .new-shop-item-image,
+html[data-theme="dark"] .new-shop-item:active .new-shop-item-image {
+	background: var(--link-hover-main);
+}*/
 
 .new-shop-item-image-wrapper {
 	position: relative;
@@ -180,10 +198,14 @@
 	max-height: 260px;
 }
 
+html[data-theme="dark"] .new-shop-item-image {
+	filter: brightness(0.8) contrast(1.1);
+}
+
 .new-shop-item-hidden {
 	margin: auto;
 	position: absolute;
-	background: #FFF7DC;
+	background: var(--item-hover-main);
 	max-height: 80px;
 	bottom: -85px;
 	left: 0;
@@ -219,7 +241,10 @@
 .shop-items {
 	display: flex;
 	padding: 40px 80px;
-	margin-top: 5px;
+}
+
+html[data-theme="dark"] .shop-items{
+	background: var(--main-color);
 }
 
 .shop-items-filter {
@@ -227,8 +252,12 @@
 	height: 352px;
 	margin-right: 63px;
 	background: #FFFFFF;
-	box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);
+	box-shadow: 1px 1px 4px rgba(100, 100, 100, 0.25);
 	border-radius: 10px;
+}
+
+html[data-theme="dark"] .shop-items-filter {
+	background: #222;
 }
 
 .shop-items-container {
@@ -243,7 +272,7 @@
 	height: 348px;
 	padding: 6px 0;
 	margin: 0 20px 20px 20px;
-	box-shadow: 2px 2px 4px rgba(12, 12, 12, 0.25);
+	box-shadow: 2px 2px 4px rgba(100, 100, 100, 0.25);
 /*	box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.25);*/
 	border-radius: 10px;
 
@@ -253,13 +282,17 @@
   	-o-transition : all 0.2s ease-in-out;
 }
 
+html[data-theme="dark"] .shop-item {
+	background: #222;
+}
+
 .shop-item:hover,
 .shop-item:active {
 	border-radius: 10px;
-	background: #FFFCF3;
+	background: var(--item-hover-main) !important;
 	/*border: 3px solid #F2B61B;*/
 	/*box-sizing: border-box;*/
-	box-shadow: inset 0 0 0 3px #FFD600;
+	box-shadow: inset 0 0 0 3px #F2B61B/*#FFD600*/;
 }
 
 .link-span {
@@ -274,11 +307,12 @@
 
 .shop-item-read-link {
 	display: none;
-	background: #FFD600;
+	background: #FFD439;
 	position: absolute;
 	border-radius: 10px;
 	font-size: 18px;
 	font-weight: 600;
+	color: #000 !important;
 	text-align: center;
 	outline: none;
 	border: none;
@@ -297,7 +331,7 @@
 
 .shop-item-read-link:hover,
 .shop-item-read-link:active {
-	background: #d8b131;
+	background: var(--link-hover-main);
 }
 
 .shop-item:hover .shop-item-read-link,
@@ -440,5 +474,5 @@ input[type=number]::-webkit-outer-spin-button {
 
 .shop-item-cart-button:hover,
 .shop-item-cart-button:active {
-	background: #d8b131;
+	background: var(--link-hover-main);
 }
