--- a/css/variables.css
+++ b/css/variables.css
@@ -1,20 +1,31 @@
 :root {
 	--main-color: #FFD642;
 	--background: #F9F9F9;
+
 	--border-yellow: #FFDA57;
+
 	--text-color: #000;
 	--text-color-secondary: #F9F9F9;
+
 	--white-gray-switch: #FFF;
+
 	--link-hover-main: #EAEAEA;
 	--link-hover-secondary: #d8b131;
+
+	--item-hover-main: #FFFCF3;
 }
 
 [data-theme="dark"] {
 	--main-color: #333;
 	--background: #e5bd3b;
+
 	--text-color: #F9F9F9;
 	--text-color-secondary: #000;
+
 	--white-gray-switch: #333;
+
 	--link-hover-main: #bf9a2b;
-	--link-hover-secondary: #EAEAEA;
+	--link-hover-secondary: #bf9a2b;
+
+	--item-hover-main: #181818;
 };
