--- a/css/addesk.css
+++ b/css/addesk.css
@@ -1,3 +1,4 @@
+/*================================================header============================================*/
 .link-ad-addesk:link,
 .link-ad-addesk:visited {
 	display: block;
@@ -29,10 +30,20 @@
 	padding-bottom: 12px;
 }
 
+/*================================================search==============================================*/
+
+.search-clarifier {
+	font-size: 24px;
+	color: #000;
+	text-align: center;
+	margin-top: 32px;
+	margin-bottom: 0;
+}
+
 .search-wrapper {
 	width: 100%;
 	height: 110px;
-	margin-top: 60px;
+	margin-top: 0;
 	background: var(--main-color);
 }
 
@@ -92,6 +103,8 @@
 	margin-top: 60px;
 	padding: 0;
 }
+
+/*============================================filters================================================*/
 
 .filters-wrapper {
 	display: flex;
@@ -153,6 +166,43 @@ html[data-theme="dark"] .pet-category-image {
 html[data-theme="dark"] .dropdown-image {
 	filter: invert(90%);
 }
+
+.list-grid-switches {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 45px;
+	padding: 0 89px;
+	border-bottom: 3px solid #ECAD0D;
+}
+
+html[data-theme="dark"] .list-grid-switches {
+	background: var(--main-color);
+}
+
+.list-grid-switch {
+	display: flex;
+	align-items: center;
+	cursor: pointer;
+	outline: none;
+	border: none;
+	color: var(--text-color);
+	font-size: 18px;
+	font-weight: 600;
+	background: none;
+}
+
+.list-grid-switch:last-child {
+	margin-left: 60px;
+}
+
+.list-grid-switch i {
+	font-size: 28px;
+	margin-right: 5px;
+	transition: color 0.2s ease-in-out;
+}
+
+/*===============================================addesk items========================================*/
 
 .addesk-items {
 	padding: 20px 80px;
@@ -272,6 +322,7 @@ html[data-theme="dark"] .addesk-item-image {
 	font-size: 12px;
 	font-weight: 400;
 	opacity: 0.5;
+	overflow: hidden;
 }
 
 .addesk-item-description {
@@ -288,6 +339,7 @@ html[data-theme="dark"] .addesk-item-image {
 .addesk-item-phone {
 	font-size: 18px;
 	font-weight: 400;
+	overflow: hidden;
 }
 
 .addesk-item-bottom {
@@ -329,4 +381,66 @@ html[data-theme="dark"] .addesk-item-image {
 .addesk-item-favorite:hover,
 .addesk-item-favorite:active {
 	background: var(--link-hover-secondary);
+}
+
+/*=========================================addesk item list view======================================*/
+
+.active i {
+	color: #ECAD0D;
+}
+
+.list .addesk-item {
+	display: block;
+	margin: 0 auto 20px auto;
+	width: 1000px;
+	height: 188px;
+	position: relative;
+}
+
+.list .addesk-item-image-wrapper {
+	width: 300px;
+}
+
+.list .addesk-item-image {
+	height: 300px;
+	max-width: 400px;
+	max-height: 300px;
+}
+
+.list .addesk-item-info {
+	float: none !important;
+}
+
+.list .addesk-item-head {
+	max-width: 500px;
+}
+
+.list .addesk-item-category {
+	max-width: 500px;
+}
+
+.list .addesk-item-description {
+	max-width: 500px;
+}
+
+.list .addesk-item-bottom {
+	top: -20px;
+	bottom: 10px;
+	right: 0;
+	width: 200px;
+	padding-right: 20px;
+	padding-top: 10px;
+}
+
+.list .addesk-item-date-price {
+	float: none !important;
+	text-align: right;
+}
+
+.list .addesk-item-price {
+	font-size: 24px;
+}
+
+.list .addesk-item-favorite {
+	margin-top: 100px;
 }
