--- a/css/shopping_basket.css
+++ b/css/shopping_basket.css
@@ -137,6 +137,7 @@ html[data-theme="dark"] .shop-item-quantity-container {
 }
 
 .shop-item-price-container {
+	position: relative;
 	display: flex;
 	width: 200px;
 	align-items: center;
@@ -149,7 +150,20 @@ html[data-theme="dark"] .shop-item-quantity-container {
 	font-size: 27px;
 }
 
-.shop-items-container form {
+.shop-item-remove {
+	position: absolute;
+	background: none;
+	outline: none;
+	border: none;
+	font-size: 30px;
+	font-weight: 600;
+	cursor: pointer;
+	color: red;
+	right: -50px;
+	top: 57px;
+}
+
+.shop-items-container .shop-items-order-form {
 	position: relative;
 	width: 100%;
 	height: 60px;
