--- a/css/read_add.css
+++ b/css/read_add.css
@@ -16,7 +16,39 @@
 
 .add-images-slider { 
 	height: 500px;
-	background: black;
+	margin-bottom: 50px !important;
+	background: var(--item-hover-main);
+}
+
+.add-images-slider div {
+	width: inherit;
+}
+
+.add-images-slider div img {
+	margin: 0 auto;
+	max-height: 500px;
+	max-width: 800px;
+}
+
+.slick-dots li button:before {
+	height: 40px !important;
+	width: 40px !important;
+	line-height: 40px !important;
+	font-size: 14px !important;
+}
+
+.slick-prev:before, .slick-next:before {
+	font-size: 40px !important;
+	color: var(--border-yellow) !important;
+}
+
+.slick-prev {
+	left: 0px !important;
+	z-index: 99;
+}
+
+.slick-next {
+	right: 20px !important;
 }
 
 .add-item-date {
